--- a/SHSA3G04.Rnw
+++ b/SHSA3G04.Rnw
@@ -225,7 +225,7 @@ P_e = k/n
       \begin{equation}
       X \sim \text{Binomial}(n, \pi) \quad \text{and} \quad P(X = k) = {n \choose k } \pi^k \cdot (1 - \pi)^{n-k}, \quad k = 0, ..., n
       \end{equation}
-      where $n = \Sexpr{20}$ and $\pi$ is the unknown prevalence of workers that have acceptable levels of pollutant.
+      where $n = \Sexpr{n}$ and $\pi$ is the unknown prevalence of workers that have acceptable levels of pollutant.
       
       We know that, under the null hypothesis $\text{H}_0$, $\pi = \Sexpr{P}$, thus
       \begin{equation}
